feat(对话系统): 为旅客实体添加随机对话支持
- 新增七类旅客（普通、富裕、重负、巨富、普通VIP、高级VIP、赞助者）的对话文本
- 旅客实体在生成时会随机分配对应类型的对话ID
- 玩家右键点击旅客可触发已分配的对话
- 扩展对话注册表以支持按ID解析旅客对话